Add location for badges and pointscales
